// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dlfmHC kBjrcq"
>
  <div
    class="sc-eCstZk kTNdDO"
  >
    <span
      class="sc-jSguLX"
    >
      0
    </span>
    <span
      class="sc-gKsecS rVpVW"
    >
      42
    </span>
  </div>
  <button
    class="sc-bdfCDU sc-gsTDqH dIlspm fTjNcL"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dlfmHC kBjrcq"
>
  <div
    class="sc-hKgKIp egzvyV"
  >
    🛌🛌
  </div>
  <button
    class="sc-bdfCDU sc-gsTDqH dIrhWV fTjNcL"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dlfmHC kBjrcq"
>
  <div
    class="sc-hKgKIp egzvyV"
  >
    🍅
  </div>
  <button
    class="sc-bdfCDU sc-gsTDqH dIrhWV fTjNcL"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dlfmHC kBjrcq"
>
  <div
    class="sc-hKgKIp egzvyV"
  >
    🛌
  </div>
  <button
    class="sc-bdfCDU sc-gsTDqH dIrhWV fTjNcL"
  >
    Start
  </button>
</div>
`;
